fix spacing in home

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -417,20 +417,20 @@ body {
       padding: 0 2rem; } }
 
 .section-products {
-  padding: 6rem 0; }
+  padding: 10rem 0 8rem 0; }
   @media (max-width: 768px) {
     .section-products {
       padding: 6rem 2rem; } }
 
 .section-shops {
-  padding: 6rem 0;
+  padding: 10rem 0 3.5rem 0;
   background-color: #f2f5f5; }
   @media (max-width: 768px) {
     .section-shops {
       padding: 6rem 2rem; } }
 
 .section-news {
-  padding: 6rem 0; }
+  padding: 10rem 0 10rem 0; }
   @media (max-width: 768px) {
     .section-news {
       padding: 6rem 2rem; } }
