--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,12 +1,12 @@
 .section-products {
-  padding: 6rem 0;
+  padding: 10rem 0 8rem 0;
   @include addMediaQuery(tablet) {
     padding: 6rem 2rem;
   }
 }
 
 .section-shops {
-  padding: 6rem 0;
+  padding: 10rem 0 3.5rem 0;
   background-color: $color-grey-2;
   @include addMediaQuery(tablet) {
     padding: 6rem 2rem;
@@ -14,7 +14,7 @@
 }
 
 .section-news {
-  padding: 6rem 0;
+  padding: 10rem 0 10rem 0;
   @include addMediaQuery(tablet) {
     padding: 6rem 2rem;
   }
